# captain-ballard

./: .envrc  .gitignore  .nvimrc  .vimspector.json  CMakeLists.txt  README.md  gede2.ini  makefile  shell.nix
appconf/: captain-ballard.desktop
assets/: TODO.md
changelogs/: 1.0.0
core/: CMakeLists.txt  main.c  resources.c  resources.xml
garbage/: __main.c  _cb_nuklear.c_  _main.c  cb_git.c  cb_git.h  cb_git_common.c  cb_git_common.h  cb_window.c  common.h  file.c  garbage.txt  git_status.c  git_status.h  main.c  main.c_  makefile  my_vector_char.c  my_vector_char.h  nk_glfw_gl2.h  nk_launcher.c_  sqlite.c  system_tray.h
garbage/libs/nfd/: nfd_common.h
libs/nfd/: nfd.h  nfd_common.c
libs/nuklear/: nuklear.h
libs/sqlite/: sqlite_util.c  sqlite_util.h
modules/: CMakeLists.txt
modules/giti/: git_common.c
modules/sqlite/: sqlite_util.c
modules/ui/: window_app_indicator.c  window_settings.c  window_status.c  window_status.h
modules/util/: cb_daemon.c  cb_log.h
src/: _main.c_  cb_array.c  cb_array.h  cb_daemon.c  cb_daemon.h  cb_file.c  cb_file.h  cb_log.c  cb_log.h  cb_nuklear.c  cb_nuklear.h  cb_util.c  file.h  git_common.c  git_common.h  git_status.c  git_status.h  main.c  nk_launcher.h  nk_status.c  nk_status.h  nk_window.c  nk_window.h  sqlite_util.c  sqlite_util.h  util.c  util.h
src/sqlite/: sqlite_util.c
src/ui/: cb_window.c  cb_window.h
src/util/: cb_array.h  cb_file.c  cb_util.h  cb_vector.h
ui/: cb_window.c  cb_window.h  system_tray.c  window_app_indicator.c  window_app_indicator.h  window_settings.c  window_settings.h  window_status.c
util/: cb_daemon.h  cb_file.c  cb_file.h
util/c/: cb_log.c
